rsa: add Find_Mod_Inverse function
Signed-off-by: Zarak <cyril@fayak.com>

--- a/tiny-bignum/Makefile
+++ b/tiny-bignum/Makefile
@@ -1,20 +1,28 @@
 CC     := gcc
 MACROS := 
-CFLAGS := -I. -Wundef -Wall -Wextra -O3 $(MACROS)
-
+SANITYZE := -fsanityze=address
+#VALGRIND := valgrind
+CFLAGS := -I. -Wundef -Wall -Wextra -O3 $(MACROS) $(SANITYZE)
+CFLAGS_TEST := -I. -Wundef -Wall -Wextra -g
 
 all:
-	@$(CC) $(CFLAGS) bn.c ./tests/golden.c      -o ./test_golden
-	@$(CC) $(CFLAGS) bn.c ./tests/hand_picked.c -o ./test_hand_picked
-	@$(CC) $(CFLAGS) bn.c ./tests/load_cmp.c    -o ./test_load_cmp
-	@$(CC) $(CFLAGS) bn.c ./tests/factorial.c   -o ./test_factorial
-	@$(CC) $(CFLAGS) bn.c ./tests/randomized.c  -o ./test_random
+	@$(CC) $(CFLAGS_TEST) bn.c ./tests/bn_convertion.c  -o ./test_bn
+	@#$(CC) $(CFLAGS) bn.c ./tests/golden.c      -o ./test_golden
+	@#$(CC) $(CFLAGS) bn.c ./tests/hand_picked.c -o ./test_hand_picked
+	@#$(CC) $(CFLAGS) bn.c ./tests/load_cmp.c    -o ./test_load_cmp
+	@#$(CC) $(CFLAGS) bn.c ./tests/factorial.c   -o ./test_factorial
+	@#$(CC) $(CFLAGS) bn.c ./tests/randomized.c  -o ./test_random
 	@#$(CC) $(CFLAGS) bn.c ./tests/rsa.c         -o ./test_rsa
 
 bindings: bn.h
 	gcc -c -fdump-ada-spec -C bn.h
 
-test:
+test: all
+	@echo
+	@echo REAL TESTS boii
+	@$(VALGRIND) ./test_bn
+
+old-test:
 	@echo
 	@echo ================================================================================
 	@./test_golden
