--- a/tiny-bignum/Makefile
+++ b/tiny-bignum/Makefile
@@ -1,7 +1,7 @@
 CC     := gcc
 MACROS := 
-#SANITIZE := -fsanitize=address
-SANITIZE :=
+SANITIZE := -fsanitize=address
+#SANITIZE :=
 #VALGRIND := valgrind
 CFLAGS := -I. -Wundef -Wall -Wextra -O2
 CFLAGS_TEST := -I. -Wundef -Wall -Wextra -g -O2
@@ -9,7 +9,7 @@ CFLAGS_TEST := -I. -Wundef -Wall -Wextra -g -O2
 all:
 	@$(CC) $(CFLAGS_TEST) bn.c ./tests/bn_convertion.c  -o ./test_bn
 	@$(CC) $(CFLAGS_TEST) bn.c ./tests/prng.c           -o ./prng
-	@$(CC) $(CFLAGS_TEST) bn.c ./tests/miller.c           -o ./miller
+	@#$(CC) $(CFLAGS_TEST) bn.c ./tests/miller.c           -o ./miller
 	@#$(CC) $(CFLAGS) bn.c ./tests/golden.c      -o ./test_golden
 	@#$(CC) $(CFLAGS) bn.c ./tests/hand_picked.c -o ./test_hand_picked
 	@#$(CC) $(CFLAGS) bn.c ./tests/load_cmp.c    -o ./test_load_cmp
